# cmake_qt5_upstream

./: README.md  build.sh
myapp/: CMakeLists.txt  myapp.C
mylib/: CMakeLists.txt  MylibConfig.cmake  mylib.C  mylib.h
